# JesterBot

./: .env_example  .gitignore  LICENSE  pyproject.toml  run.py
locales/ru-RU/clean/: common.json
locales/ru-RU/config/: common.json  modals.json
locales/ru-RU/custom_voice/: common.json
locales/ru-RU/duets/: common.json
locales/ru-RU/economy/: common.json
locales/ru-RU/general/: cards.json  enums.json  errors.json  exceptions.json  items-config.json  quests-config.json  time.json  ui.json
locales/ru-RU/interactions/: common.json
locales/ru-RU/inventory/: cards.json  categories.json  common.json  paginators.json
locales/ru-RU/lootboxes/: backgrounds-lootbox.json  common.json  roles-lootbox.json
locales/ru-RU/members/: activity.json  profile.json  top.json
locales/ru-RU/quests/: common.json  views.json
locales/ru-RU/settings/: common.json  types.json  views.json
locales/ru-RU/shop/: cards.json  (+2 more)
src/: _api_interaction.py  _cog_manager.py  _config.py  _manual_config.py  api_client.py  bot.py  config.py  customisation.py  localization.py  logger.py  manual_config.py  settings.py
src/locales/: base.ru.json  cards.ru.json  enums.ru.json  exceptions.ru.json  items-config.ru.json  quests-config.ru.json  time.ru.json  ui.ru.json
src/models/: __init__.py  asset.py  duet.py  guild.py  inventory.py  member.py  salary.py  ticket.py  user.py
src/utils/: _cards.py  _converters.py  _convertes.py  _decorators.py  _embeds.py  _events.py  _exceptions.py  _experience.py  _extra.py  _mapping.py  _modals.py  _permissions.py  _tasks.py  _text.py  _time.py
(+227 files in other folders)
